# ismpc-cpp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build_wheel  commands.sh  package.xml  pixi.toml  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  upload_wheel.yml
bindings/: CMakeLists.txt  gait.py  ismpc_binding.cpp  ismpc_cpp.pyi  ismpc_py.pyi  main.py  planner_test.py  plotting.py
config/: config.yaml  hrp4.yaml  nao.yaml
config/robots/: hrp4.yaml  nao.yaml
docs/: SPQR.md  TODO.md
include/: ismpc.h
include/ismpc_cpp/: ismpc.h
include/ismpc_cpp/dart/: controller.h  kalman_filter.h  qp_solver.h  simulated_robot.h  state_provider.h
include/ismpc_cpp/libraries/: constraint_lib.h  cost_lib.h  feet_lib.h
include/ismpc_cpp/modules/: casadi_mpc.h  foot_trajectory_generator.h  footstep_plan_provider.h  footstep_switcher.h  footsteps_plan_provider.h  kalman_filter.h  model_predictive_controller.h  moving_constraint_provider.h  reference_provider.h  swing_foot_provider.h  walk_engine.h  walk_state_provider.h
include/ismpc_cpp/representations/: footstep_plan.h  footsteps.h  lip_robot.h  reference.h  state.h
include/ismpc_cpp/tools/: debug.h  proxsuite.h
include/ismpc_cpp/tools/config/: config.h  robot_config.h
include/ismpc_cpp/tools/math/: arithmetic.h  pose2.h  pose3.h  rotation_matrix.h
include/ismpc_cpp/types/: body_parts.h  configs.h  end_effector.h  footstep.h  ismpc_qp.h  lip_state.h  math_types.h  optimization.h  state.h  tail_type.h  walk_state.h
include/libraries/: constraint_lib.h  cost_lib.h
include/modules/: footsteps_plan_provider.h  model_predictive_controller.h  reference_provider.h  swing_foot_provider.h  walk_engine.h  walk_state_provider.h
include/representations/: footsteps.h  frame_info.h  lip_robot.h  reference.h
include/simulation/: simulated_robot.h  world_node.h
include/tools/: systemvars.h  systemvars.h.in  types.h
include/tools/config/: config.h  robot_config.h
include/tools/math/: angle.h  arithmetic.h  pose2.h  pose3.h  rotation_matrix.h
include/types/: body_parts.h  end_effector.h  optimization.h  state.h  support_phase.h  walk_state.h
ismpc_sim/: pyproject.toml
ismpc_sim/ismpc_sim/dart/: config.py  controller.py  kinematics.py  main.py  robot.py
ismpc_sim/ismpc_sim/mujoco/: mujoco_basics.ipynb
ismpc_sim/ismpc_sim/mujoco/humanoid/: humanoid_test.ipynb
simulation/: .gitignore  .gitmodules  pyproject.toml
simulation/dart/: config.py  controller.py  kinematics.py  main.py  robot.py  utils.py
simulation/matplotlib/: main.py  plotting.py
simulation/models/nao/urdf/: nao.urdf
simulation/mujoco/: mujoco_basics.ipynb
simulation/simulation/backends/dart/: controller.py  dart.py  kinematics.py  misc.py  robot.py
simulation/simulation/backends/matplotlib/: gait.py  mpc.py  plotting.py
simulation/simulation/backends/mujoco/: mujoco_basics.ipynb
simulation/simulation/backends/mujoco/nao/: nao_test.ipynb
simulation/simulation/dart/: config.py  controller.py  dart.py  kinematics.py  main.py  robot.py
simulation/simulation/matplotlib/: main.py  plotting.py
simulation/simulation/mpc/: gait.py  mpc.py  plotting.py
simulation/simulation/mujoco/humanoid/: humanoid_test.ipynb
simulation/simulation/planner/: plan.py  planner.py  plotting.py
simulation/simulation/utils/: __init__.py  misc.py
simulation/urdf/: ground.urdf
simulation/webots/nao/worlds/: .nao_robocup.wbproj  nao_robocup.wbt
src/: bindings.cpp  cppmain.cpp  dartmain.cpp  main.cpp  webotsmain.cpp
src/dart/: controller.cpp  kalman_filter.cpp  qp_solver.cpp  simulated_robot.cpp  state_provider.cpp
src/libraries/: constraint_lib.cpp  cost_lib.cpp  feet_lib.cpp
src/modules/: casadi_mpc.cpp  foot_trajectory_generator.cpp  footstep_plan_provider.cpp  footstep_switcher.cpp  footsteps_plan_provider.cpp  kalman_filter.cpp  model_predictive_controller.cpp  moving_constraint.provider.cpp  reference_provider.cpp  swing_foot_provider.cpp  walk_engine.cpp  walk_state_provider.cpp
src/representations/: footstep_plan.cpp  footsteps.cpp  lip_robot.cpp  reference.cpp  state.cpp
src/simulation/: simulated_robot.cpp  world_node.cpp
src/tools/config/: config.cpp  robot_config.cpp
src/tools/math/: angle.cpp  pose2.cpp  pose3.cpp  rotation_matrix.cpp
src/types/: end_effector.cpp  ismpc_qp.cpp  lip_state.cpp  optimization.cpp  state.cpp  tail_type.cpp
test/: CMakeLists.txt
test/config/: config_test.cpp
test/math/: arithmetic_test.cpp  pose3_test.cpp
