[project]
authors = [{name = "neverorfrog", email = "97flavio.maiorana@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "ismpc_sim"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
dartpy = ">=6.15.0,<7"

[tool.pixi.pypi-dependencies]
ismpc_sim = { path = ".", editable = true }

[tool.pixi.tasks]
main = "python ismpc_sim/dart/main.py"
py-install = 'python ../setup.py install && python -m nanobind.stubgen -m ismpc'
