[project]
authors = [{name = "neverorfrog", email = "97flavio.maiorana@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "simulation"
requires-python = ">=3.11"
version = "0.1.0"
dynamic = ["readme", "optional-dependencies"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64",]

[tool.pixi.dependencies]
dartpy = ">=6.15.0,<7"
numpy = ">=1.26.4,<2"
setuptools = ">=75.8.0,<76"
nanobind = ">=2.4.0,<3"
pyyaml = ">=6.0.2,<7"
omegaconf = ">=2.3.0,<3"
pybind11-stubgen = ">=2.4.2,<3"
pybind11 = ">=2.13.6,<3"
scipy = ">=1.15.1,<2"
qpsolvers = ">=4.4.0,<5"
matplotlib = ">=3.10.0,<4"
tqdm = ">=4.67.1,<5"

[tool.pixi.pypi-dependencies]
simulation = { path = ".", editable = true }

[tool.pixi.tasks]
dart = "python simulation/dart/main.py"
matplotlib = "python simulation/matplotlib/main.py"
install-ismpc-cpp = 'cd .. && python setup.py install'
typings = 'python -m nanobind.stubgen -m ismpc && pybind11-stubgen dartpy -o ../.typings  && python -m nanobind.stubgen -m scipy.spatial.transform'
